--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <base href="/" />
     <script type="text/javascript" src="/bundle.js"></script>
   </body>
 </html>
